--- a/TeamblueTest/TeamblueTest/appsettings.json
+++ b/TeamblueTest/TeamblueTest/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TeamBlueTestNicolai;Trusted_Connection=True;"
+  }
 }
